[feature] Alterado opção de encoding para UTF-8

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
 repositories {
     jcenter()
 }
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 
 dependencies {
 }
