--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ repositories {
 }
 
 group('me.skiincraft')
-version('2021.0426.0')
+version('2021.0506.0')
 
 dependencies {
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
 }
